--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                                                 <div class="form_wrap d-flex">
                                                         <div class="single-field max_width ">
                                                                 <label for="#">Balance</label>
-                                                                <input type="text" class="wide-new" value="Rp. 596.000"/>
+                                                                <input type="text" class="wide-new" value="Rp. 6.092.000"/>
                                                                         
                                                             </div>
                                                         
@@ -118,7 +118,7 @@
                                                             </div>
                                                     </div>
                                                     <div class="info_content">
-                                                        <p>Belum ada penambahan saldo.</p>
+                                                        <p>Penambahan saldo oleh yaya Rp. 500.000 dan Rdlwan Rp. 5.000.000. Pengurangan saldo oleh biaya bulanan bank Rp. 4000</p>
                                                         <div class="prise_view_details d-flex justify-content-between align-items-center">
                                                             <span>Rp. 0</span>
                                                         </div>
